create financials overview page